Анализ интернет-магазина видеоигр "Стримчик".ipynb

--- a/Анализ интернет-магазина видеоигр _Стримчик_.ipynb
+++ b/Анализ интернет-магазина видеоигр _Стримчик_.ipynb
@@ -41,7 +41,7 @@
     "### Инструкция по выполнению проекта\n",
     "\n",
     "#### Шаг 1. Откройте файл с данными и изучите общую информацию\n",
-    "- путь к файлу: /datasets/games.csv. Скачать датасет\n",
+    "- путь к файлу: /datasets/games.csv.\n",
     "\n",
     "#### Шаг 2. Подготовьте данные\n",
     "- замените названия столбцов (приведите к нижнему регистру);\n",
